# g2o-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
examples/: simple_optimize.rs
src/: lib.rs  macros.rs
src/core/: mod.rs  optimizable_graph.rs  optimization_algorithm_factory.rs  parameter.rs  robust_kernel.rs  sparse_optimizer.rs
src/types/: mod.rs  slam3d.rs  vio.rs
