[package]
name = "g2o-sys"
description = "FFI bindings for G2O"
version = "0.1.0"
edition = "2021"
authors = ["Alex Badics <admin@stickman.hu>"]
categories = ["external-ffi-bindings", "mathematics"]
license = "BSD-2-Clause"

[dependencies]
autocxx = "0.25.0"
cxx = "1.0"

[build-dependencies]
cmake = "0.1"
autocxx-build = "0.25.0"
