[package]
name = "g2o"
description = "Safe bindings for G2O"
version = "0.1.0"
edition = "2021"
authors = ["Alex Badics <admin@stickman.hu>"]
categories = ["api-bindings", "mathematics"]
license = "BSD-2-Clause"

[dependencies]
cpp = "0.5.8"
nalgebra = { version = "0.32.2", optional = true }

[features]
default = ["nalgebra"]

[build-dependencies]
cmake = "0.1"
cpp_build = "0.5.8"
glob = "0.3.1"
